Fixed columns on mobile view

--- a/resources/sass/theme/_images.scss
+++ b/resources/sass/theme/_images.scss
@@ -7,3 +7,7 @@ img.icon {
   padding-right: 3px;
   height: 20px;
 }
+
+img.m-200 {
+  max-width: 200px;
+}
